# T2-FHE-Compiler-and-Benchmarks

./: .gitignore  Dockerfile  LICENSE  README.md  pom.xml  test.cpp
.circleci/: build_libs.sh  clone_libs.sh  config.yml  test_1.sh  test_HElib.sh  test_Lattigo.sh  test_PALISADE.sh  test_SEAL.sh  test_TFHE.sh
Kernels/permutations/: Permutations.java
Kernels/sieveOfEratosthenes/: README.md
Microbenchmarks/PIR/: PIR.java  README.md
Microbenchmarks/fibonacci/: README.md
OtherAlgorithms/numOccurrences/: CountOccurrences.java  README.md  private.input
PALISADE/: CMakeLists.txt  helper.hpp
PALISADE/ML-Inference/lr/: lr-bfv-bgv-batched.cpp
PALISADE/Microbenchmarks/fibonacci-bfv/: fibonacci-bfv.cpp
PALISADE/Microbenchmarks/fibonacci-bfv-bgv/: fibonacci-bfv-bgv.cpp
SEAL/: CMakeLists.txt  helper.cpp  helper.hpp
SEAL/Crypto/simon-bfv/: simon-bfv-batched.cpp  simon-bfv.cpp  simon_ctxt.ptxt  simon_keys.ptxt
SEAL/ML-Inference/lr/: inputs.ptxt  lr-bfv-batched.cpp
SEAL/Microbenchmarks/factorial-bfv/: factorial-bfv.cpp
SEAL/functional_units/: functional_units.hpp
TFHE/: Makefile  helper.cpp  helper.hpp
TFHE/Crypto/Simon/: simon.cpp  simon_keys.ptxt
TFHE/Microbenchmarks/PIR/: PIR.cpp  pir_db.ptxt
TFHE/Microbenchmarks/factorial/: factorial.cpp
TFHE/Microbenchmarks/fibonacci/: fibonacci.cpp  fibonacci3.ptxt
TFHE/client/: encrypt.cpp
TFHE/functional_units/: functional_units.cpp  functional_units.hpp  functional_units_test.cpp
concrete/: README.md
juliet/: README.md
juliet/EncoderBenchmarks/SimonCipher/: Simon.java  simon.c  simon_expand.c
juliet/Kernels/permutations/: README.md
juliet/Kernels/sieveOfEratosthenes/: SieveOfEratosthenes.java
juliet/Microbenchmarks/PIR/: private.tape
juliet/Microbenchmarks/factorial/: README.md  factorial.java
juliet/Microbenchmarks/fibonacci/: fibonacci.java
seal/: CMakeLists.txt  README.md  helper.hpp
seal/Microbenchmarks/fibonacci/: fibonacci.cpp
src/Concrete/: .gitignore
src/HElib/: Makefile  README.md
src/HElib/examples/: Makefile  helib.cpp
src/HElib/functional_units/: functional_units.cpp  functional_units.hpp  functional_units_test.cpp
src/Lattigo/: .gitignore  Makefile  README.md  go.mod  go.sum
src/Lattigo/functional_units/: functional_units.go
src/PALISADE/: .gitignore  CMakeLists.txt  README.md  helper.cpp
src/PALISADE/ML-Inference/lr/: lr-bfv-bgv-batched.cpp
src/PALISADE/Microbenchmarks/factorial-bfv-bgv/: factorial-bfv-bgv.cpp
src/PALISADE/Microbenchmarks/fibonacci-bfv-bgv/: fibonacci-bfv-bgv.cpp
src/PALISADE/functional_units/: functional_units.hpp  functional_units_test.cpp
src/SEAL/: .gitignore  CMakeLists.txt  helper.cpp
src/SEAL/Crypto/simon-bfv/: simon-bfv-batched.cpp  simon-bfv.cpp  simon_ptxt.ptxt
src/SEAL/ML-Inference/lr/: lr-bfv-batched.cpp
src/SEAL/Microbenchmarks/factorial-bfv/: factorial-bfv.cpp
src/SEAL/Microbenchmarks/fibonacci-bfv/: fibonacci-bfv.cpp
src/SEAL/functional_units/: functional_units.cpp  functional_units.hpp  functional_units_test.cpp  functional_units_test_binary.cpp
src/TFHE/: .gitignore  Makefile  README.md  helper.hpp
src/TFHE/Crypto/Simon/: simon.cpp  simon_ctxt.ptxt  simon_ptxt.ptxt
src/TFHE/Microbenchmarks/PIR/: PIR.cpp
src/TFHE/Microbenchmarks/factorial/: factorial.cpp
src/TFHE/client/: decrypt.cpp  encrypt.cpp
src/TFHE/functional_units/: functional_units.cpp  functional_units.hpp  functional_units_test.cpp
src/test/plots/: .gitignore  bars.py  batcher-sort.py  chi_crc_compilers.py  chi_squared.py  crc.py  euclidean.py  euclidean_compilers.py  fibonacci.py  hamming.py  isort.py  linechart.py  lr.py  lr_ckks.py  manhattan.py  mmult.py  mmult_ckks.py  mmult_compilers.py  nn.py  pir_bin.py  pir_fp.py  pir_int.py
src/test/resources/: Add.java  Add.t2  arithmetic.t2  arrays.t2  batching.t2  bin_add_test.t2  bin_mul_test.t2  bin_sub_test.t2  bin_test.t2  cardio.t2  chisquared.t2  ckks_test.t2  cmp.t2  conditions.t2  factorial.t2  fibonacci.t2  jenkins.t2  leq_bin_test.t2  logisticregression.t2  lt_bin_test.t2  lt_test.t2  matrixmult.t2  pir.t2  shift.t2  sieveoferatosthenes.t2
src/test/resources/batcher_sort/: README.md  batcher_sort_16.t2  batcher_sort_32.t2  batcher_sort_4.t2  batcher_sort_8.t2
src/test/resources/chi_squared/: README.md  chi_squared.t2  chi_squared_ckks.t2
src/test/resources/crc/: README.md  crc32.t2  crc8.t2  crc8_ptxt  crc8_ptxt.cpp
src/test/resources/euclidean_distance/: README.md  euclidean_distance.t2  euclidean_distance_v128.t2  euclidean_distance_v128_ckks.t2  euclidean_distance_v64.t2  euclidean_distance_v64_ckks.t2
src/test/resources/factorial/: factorial.t2
src/test/resources/fibonacci/: README.md  fibonacci.t2  fibonacci_20.t2  fibonacci_30.t2  fibonacci_40.t2
src/test/resources/ham_dist/: README.md  hamming_distance.t2  hamming_distance_v4.t2  hamming_distance_v8.t2
src/test/resources/insertion_sort/: README.md  insertion_sort.t2  insertion_sort_16.t2  insertion_sort_32.t2  insertion_sort_4.t2  insertion_sort_8.t2
src/test/resources/jenkins/: jenkins.t2
src/test/resources/logistic_regression/: README.md  logistic_regression.t2  logistic_regression_a16.t2  logistic_regression_a16_fp.t2  logistic_regression_a4.t2  logistic_regression_a4_fp.t2  logistic_regression_a8.t2  logistic_regression_a8_fp.t2
src/test/resources/manhattan_dist/: README.md  manhattan_dist_v4_bin.t2  manhattan_dist_v4_int.t2  (+2 more)
src/test/scripts/: run_arith_ops_int.sh  run_batcher.sh  run_chi_squared.sh  run_core_ops.sh  run_core_ops_bin.sh  run_core_ops_fp.sh  run_core_ops_int.sh  run_crc.sh  run_euclidean.sh  run_fibonacci.sh  run_hamming.sh  run_hamming_int.sh  run_isort.sh  run_lr_inference.sh  run_lr_inference_fp.sh  run_manhattan.sh  run_mmult.sh  run_nn.sh  run_nn_tfhe.sh  run_pir.sh  run_pir_bin.sh  run_pir_fp.sh  run_pir_int.sh  run_rotate.sh
tfhe/: Makefile  README.md  helper.cpp  helper.hpp
tfhe/Microbenchmarks/factorial/: factorial.cpp  factorial.ptxt
tfhe/Microbenchmarks/fibonacci/: fibonacci.cpp  fibonacci2.ptxt
tfhe/client/: decrypt.cpp  encrypt.cpp  keygen.cpp
(+273 files in other folders)
